# rust_os

./: Cargo.toml  qemu.sh  test.sh
.cargo/: config.toml
src/: main.rs  serial.rs  vga_buffer.rs
tests/: basic_boot.rs
