[package]
name = "rust_os"
version = "0.1.0"
edition = "2018"

[dependencies]
bootloader = "0.9.23" # allows us to boot with no C dependenceis!
volatile = "0.2.6"
spin = "0.5.2" # we are going to use this to make mutable statics (see static Writer in vga_buffer.rs)

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

