[package]
name = "rust_os"
version = "0.1.0"
edition = "2018"

[dependencies]
bootloader = "0.9.23" # allows us to boot with no C dependenceis!
volatile = "0.2.6"
spin = "0.5.2" # we are going to use this to make mutable statics (see static Writer in vga_buffer.rs)
x86_64 = "0.14.2" # we're using this for instructions, mainly to exit QEMU
uart_16550 = "0.2.0" # this is used to send tests back to our host system via serial port

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none" # hide QEMU
]
test-success-exit-code = 33         # (0x10 << 1) | 1
test-timeout = 300 # we don't want to ever be stuck in an infinite loop FOREVER

[[test]]
name = "should_panic"
harness = false

